schema/testdata/validation_set_attribute_ctx_identity_invalid_fields/schema.keel
model UserExtension {
    fields {
        unknown Text
        password Password
    }

    actions {
        create createExt() {
            @set(userExtension.unknown = ctx.identity.unknown)
            @set(userExtension.password = ctx.identity.password)
        }
         update updateExt(id) {
            @set(userExtension.unknown = ctx.identity.unknown)
            @set(userExtension.password = ctx.identity.password)
        }
    }
}