schema/testdata/errors/operation_set_expression_unresolvable_lhs.keel
model Profile {
    fields {
        username Text @unique
    }

    actions {
        update createProfile(id) with (username) {
            //expect-error:18:33:AttributeExpressionError:The field 'identit' does not exist
            @set(profile.identit = ctx.identity)
        }
    }
}
